# qlik-sense-mcp-d4p

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  Dockerfile  Makefile  README.md  claude_desktop_remote.example.json  docker-compose.remote.yml  docker-compose.yml  mcp.json.example  pyproject.toml
qlik_sense_mcp_server/: __init__.py  config.py  engine_api.py  remote_gateway.py  repository_api.py  server.py
scripts/: push_dockerhub.sh
tests/: test_config.py  test_live_mcp_tools.py  test_remote_gateway.py  test_server.py
